created modules, routes, added short paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,10 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "skipLibCheck": true,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "@budget-tracker/auth": ["src/app/modules/auth/index.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
