--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,5 +36,12 @@
         "no-console": 2
       }
     }
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+
+  "env": {
+    "es6": true
+  }
 }
