--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@budget-tracker/auth": ["src/app/modules/auth/index.ts"],
       "@budget-tracker/design-system": ["src/app/modules/design-system/index.ts"],
       "@budget-tracker/navigation-bar": ["src/app/modules/navigation-bar/index.ts"],
-      "@budget-tracker/shared": ["src/app/modules/shared/index.ts"]
+      "@budget-tracker/shared": ["src/app/modules/shared/index.ts"],
+      "@budget-tracker/budget-tracker": ["src/app/modules/budget-tracker/index.ts"]
     }
   },
   "angularCompilerOptions": {
