--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuidv4": "^6.2.13",
     "zone.js": "^0.12.0"
   },
   "devDependencies": {
