--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@budget-tracker/shared": ["src/app/modules/shared/index.ts"],
       "@budget-tracker/budget-tracker": ["src/app/modules/budget-tracker/index.ts"],
       "@budget-tracker/utils": ["src/app/modules/utils/index.ts"],
+      "@budget-tracker/dashboard": ["src/app/modules/budget-tracker/modules/dashboard/index.ts"],
       "@budget-tracker/dashboard/categories": [
         "src/app/modules/budget-tracker/modules/dashboard/modules/categories/index.ts"
       ],
@@ -37,7 +38,8 @@
       ],
       "@budget-tracker/dashboard/activity-log": [
         "src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/index.ts"
-      ]
+      ],
+      "@budget-tracker/statistics": ["src/app/modules/budget-tracker/modules/statistics/index.ts"]
     }
   },
   "angularCompilerOptions": {
