--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "chart.js": "^4.3.0",
+    "chartjs-plugin-zoom": "^2.0.1",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
