--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "skipLibCheck": true,
     "lib": ["ES2022", "dom"],
     "strictPropertyInitialization": false,
+    "strictNullChecks": false,
     "paths": {
       "@budget-tracker/auth": ["src/app/modules/auth/index.ts"],
       "@budget-tracker/data": ["src/app/modules/data/index.ts"],
@@ -47,6 +48,6 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": false
+    "strictTemplates": false,
   }
 }
