--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:prettier/recommended"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
@@ -30,23 +31,30 @@
             "prefix": "app",
             "style": "kebab-case"
           }
-        ],
-        "no-console": "error"
+        ]
       }
     },
     {
       "files": [
         "*.html"
       ],
+      "excludedFiles": [
+        "*inline-template-*.component.html"
+      ],
       "extends": [
-        "plugin:@angular-eslint/template/recommended"
-      ]
+        "plugin:@angular-eslint/template/recommended",
+        "plugin:@angular-eslint/template/accessibility",
+        "plugin:prettier/recommended"
+      ],
+      "rules": {
+        "prettier/prettier": [
+          "error",
+          {
+            "parser": "angular",
+            "endOfLine": "auto"
+          }
+        ]
+      }
     }
-  ],
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  },
-  "env": {
-    "es6": true
-  }
+  ]
 }
