--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,12 @@
 {
-  "printWidth": 120,
-  "singleQuote": true,
-  "useTabs": false,
   "tabWidth": 2,
+  "useTabs": false,
+  "singleQuote": true,
   "semi": true,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "trailingComma": "es5",
+  "bracketSameLine": false,
+  "printWidth": 120,
+  "endOfLine": "auto"
 }
