--- a/package.json
+++ b/package.json
@@ -36,8 +36,12 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "chart.js": "^4.3.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^4.1.1",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "uuidv4": "^6.2.13",
