--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
-    "angular.enable-strict-mode-prompt": false,
-    "[html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": false
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-        "editor.formatOnSave": false
-    },
-    "prettier.configPath": ".prettierrc",
-    "eslint.format.enable": true,
-    "eslint.codeActionsOnSave.rules": null,
+  "angular.enable-strict-mode-prompt": false,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": false
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": false
+  },
+  "prettier.configPath": ".prettierrc",
+  "eslint.format.enable": true,
+  "eslint.codeActionsOnSave.rules": null
 }
