--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,5 +67,11 @@
         ]
       }
     }
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  "env": {
+    "es6": true
+  }
 }
