jasmine lint plugin, linted project

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
   "ignorePatterns": [
     "projects/**/*"
   ],
+  "plugins": [
+    "jasmine"
+  ],
   "overrides": [
     {
       "files": [
@@ -14,6 +17,45 @@
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
         "plugin:prettier/recommended"
+      ],
+      "rules": {
+        "@angular-eslint/directive-selector": [
+          "error",
+          {
+            "type": "attribute",
+            "prefix": "app",
+            "style": "camelCase"
+          }
+        ],
+        "@angular-eslint/component-selector": [
+          "error",
+          {
+            "type": "element",
+            "prefix": "app",
+            "style": "kebab-case"
+          }
+        ],
+        "no-console": "error",
+        "prettier/prettier": [
+          "warn",
+          {
+            "usePrettierrc": true
+          }
+        ],
+        "@typescript-eslint/no-unused-vars": "warn"
+      }
+    },
+    {
+      "files": [
+        "*.spec.ts"
+      ],
+      "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@angular-eslint/recommended",
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "plugin:prettier/recommended",
+        "plugin:jasmine/recommended"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
@@ -72,6 +114,7 @@
     "ecmaVersion": "latest"
   },
   "env": {
-    "es6": true
+    "es6": true,
+    "jasmine": true
   }
 }
