--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^6.10.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.53.0",
+    "eslint-plugin-jasmine": "^4.2.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
