--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,18 +20,34 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "skipLibCheck": true,
-    "lib": ["ES2022", "dom"],
+    "lib": [
+      "ES2022",
+      "dom"
+    ],
     "strictPropertyInitialization": false,
     "strictNullChecks": false,
     "paths": {
-      "@budget-tracker/auth": ["src/app/modules/auth/index.ts"],
-      "@budget-tracker/data": ["src/app/modules/data/index.ts"],
-      "@budget-tracker/design-system": ["src/app/modules/design-system/index.ts"],
-      "@budget-tracker/navigation-bar": ["src/app/modules/navigation-bar/index.ts"],
-      "@budget-tracker/shared": ["src/app/modules/shared/index.ts"],
-      "@budget-tracker/budget-tracker": ["src/app/modules/budget-tracker/index.ts"],
-      "@budget-tracker/utils": ["src/app/modules/utils/index.ts"],
-      "@budget-tracker/dashboard": ["src/app/modules/budget-tracker/modules/dashboard/index.ts"],
+      "@budget-tracker/auth": [
+        "src/app/modules/auth/index.ts"
+      ],
+      "@budget-tracker/data": [
+        "src/app/modules/data/index.ts"
+      ],
+      "@budget-tracker/design-system": [
+        "src/app/modules/design-system/index.ts"
+      ],
+      "@budget-tracker/navigation-bar": [
+        "src/app/modules/navigation-bar/index.ts"
+      ],
+      "@budget-tracker/budget-tracker": [
+        "src/app/modules/budget-tracker/index.ts"
+      ],
+      "@budget-tracker/utils": [
+        "src/app/modules/utils/index.ts"
+      ],
+      "@budget-tracker/dashboard": [
+        "src/app/modules/budget-tracker/modules/dashboard/index.ts"
+      ],
       "@budget-tracker/dashboard/categories": [
         "src/app/modules/budget-tracker/modules/dashboard/modules/categories/index.ts"
       ],
@@ -41,7 +57,9 @@
       "@budget-tracker/dashboard/activity-log": [
         "src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/index.ts"
       ],
-      "@budget-tracker/statistics": ["src/app/modules/budget-tracker/modules/statistics/index.ts"]
+      "@budget-tracker/statistics": [
+        "src/app/modules/budget-tracker/modules/statistics/index.ts"
+      ]
     }
   },
   "angularCompilerOptions": {
