--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -106,7 +106,9 @@
           {
             "usePrettierrc": true
           }
-        ]
+        ],
+        "@angular-eslint/template/click-events-have-key-events": "off",
+        "@angular-eslint/template/interactive-supports-focus": "off"
       }
     }
   ],
