--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -5,7 +5,6 @@
     {
       "name": "app",
       "installMode": "prefetch",
-      "updateMode": "lazy",
       "resources": {
         "files": [
           "/favicon.ico",
@@ -21,8 +20,8 @@
     },
     {
       "name": "assets",
-      "installMode": "lazy",
-      "updateMode": "lazy",
+      "installMode": "prefetch",
+      "updateMode": "prefetch",
       "resources": {
         "files": ["/assets/**", "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"]
       }
