added stylint, broke styles.scss into smaller files, added mixins

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,13 @@
   "prettier.configPath": ".prettierrc",
   "eslint.format.enable": true,
   "eslint.codeActionsOnSave.rules": null,
-  "lingua.defaultLanguage": "en-US"
+  "lingua.defaultLanguage": "en-US",
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "stylelint.validate": [
+    "css",
+    "scss"
+  ],
+  "stylelint.configFile": ".stylelintrc.json"
 }
