--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "stylelint-scss": "^6.4.1",
     "svg-sprite": "^2.0.4",
     "tailwindcss": "^3.2.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
