--- a/angular.json
+++ b/angular.json
@@ -88,7 +88,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
-            "styles": ["src/styles.scss", "src/custom-styles.scss"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
