--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^17.2.2",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.13",
     "@angular/compiler": "^18.2.13",
     "@angular/core": "^18.2.13",
     "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.13",
-    "@angular/material": "^17.2.2",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@angular/service-worker": "^18.2.13",
-    "@ngrx/effects": "^17.1.1",
-    "@ngrx/entity": "^17.1.1",
-    "@ngrx/store": "^17.1.1",
-    "@ngrx/store-devtools": "^17.1.1",
+    "@ngrx/effects": "^18.1.1",
+    "@ngrx/entity": "^18.1.1",
+    "@ngrx/store": "^18.1.1",
+    "@ngrx/store-devtools": "^18.1.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "chart.js": "^4.3.0",
@@ -48,7 +48,8 @@
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "uuidv4": "^6.2.13",
-    "zone.js": "^0.14.10"
+    "zone.js": "^0.14.10",
+    "@ngrx/operators": "^18.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.18",
