--- a/firebase.json
+++ b/firebase.json
@@ -4,12 +4,8 @@
     "indexes": "y"
   },
   "hosting": {
-    "public": "dist/budget-tracker",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "dist/budget-tracker/browser",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
