--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@angular/platform-browser-dynamic": "^19.2.7",
     "@angular/router": "^19.2.7",
     "@angular/service-worker": "^19.2.7",
-    "@ngrx/effects": "^18.1.1",
-    "@ngrx/entity": "^18.1.1",
-    "@ngrx/store": "^18.1.1",
-    "@ngrx/store-devtools": "^18.1.1",
+    "@ngrx/effects": "^19.1.0",
+    "@ngrx/entity": "^19.1.0",
+    "@ngrx/operators": "^18.0.0",
+    "@ngrx/store": "^19.1.0",
+    "@ngrx/store-devtools": "^19.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "apexcharts": "^4.7.0",
     "chart.js": "^4.3.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "eslint-config-prettier": "^9.1.0",
@@ -43,13 +45,13 @@
     "firebase-tools": "^13.10.2",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^4.1.1",
+    "ngx-apexcharts": "^0.7.1",
     "prettier": "^3.5.3",
     "prettier-eslint": "^16.3.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "uuidv4": "^6.2.13",
-    "zone.js": "^0.15.0",
-    "@ngrx/operators": "^18.0.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.8",
