--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,8 @@
     "css",
     "scss"
   ],
-  "stylelint.configFile": ".stylelintrc.json"
+  "stylelint.configFile": ".stylelintrc.json",
+  "i18n-ally.localesPaths": [
+    "src/assets/i18n"
+  ]
 }
