--- a/tsconfig.json
+++ b/tsconfig.json
@@ -56,6 +56,9 @@
       "@budget-tracker/move-money-between-accounts-orchestrator": [
         "src/app/orchestrators/move-money-between-accounts-orchestrator/index.ts"
       ],
+      "@budget-tracker/reset-categories-orchestrator": [
+        "src/app/orchestrators/reset-categories-orchestrator/index.ts"
+      ],
       // Pages
       "@budget-tracker/auth-page": [
         "src/app/pages/auth/index.ts"
